[package]
name = "radiant"
description = "Radiance HDR loader in Rust"
version = "0.2.0"
authors = [
  "TechPriest <yaminogakusei@gmail.com>",
  "iwikal <e.joel.nordstrom@gmail.com>",
]
repository = "https://github.com/iwikal/radiant"
license = "WTFPL"
readme = "README.md"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
structopt = "0.2"
minifb = "0.11"
anyhow = "*"
