[package]
name = "radiant"
description = "Radiance HDR loader in Rust"
version = "0.2.1"
authors = [
  "TechPriest <yaminogakusei@gmail.com>",
  "iwikal <e.joel.nordstrom@gmail.com>",
]
repository = "https://github.com/iwikal/radiant"
license = "WTFPL"
readme = "README.md"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.1"

[dev-dependencies]
structopt = "0.2"
minifb = "0.19"
anyhow = "1"

[dev-dependencies.cargo-husky]
version = "1.5"
features = ["run-cargo-fmt", "run-cargo-clippy", "user-hooks"]
